Bug Fix: each-Prod display none on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4052,7 +4052,7 @@ a#newAddressCancelBtn {
    #mobile_cart {
       display:block;
    }
-   .each-prod {
+   #main_cart {
       display:none;
    }
 
